template/kubernetes/apps/{% if vpn_tailscale %}tailnet-dns{% endif %}/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: tailnet-dns
  labels:
    app.kubernetes.io/name: tailnet-dns
    app.kubernetes.io/part-of: tailnet-dns
    app.kubernetes.io/managed-by: flux
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/audit: restricted
